<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/sepet"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/mama2"
        android:textColor="@color/koyuSiyahYaziRenk"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/mama1"
        android:textColor="@color/koyuSiyahYaziRenk"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip8"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/chip4"
        android:textAlignment="viewStart"
        android:textColor="@color/koyuSiyahYaziRenk"
        android:textSize="16sp"
        app:chipBackgroundColor="@color/resimArkaRenk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip7"
        app:layout_constraintTop_toBottomOf="@+id/imageView22" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip7"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/chip3"
        android:textAlignment="center"
        android:textColor="@color/koyuSiyahYaziRenk"
        android:textSize="16sp"
        app:chipBackgroundColor="@color/resimArkaRenk"
        app:layout_constraintEnd_toStartOf="@+id/chip8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip6"
        app:layout_constraintTop_toBottomOf="@+id/imageView20" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip6"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/chip2"
        android:textAlignment="center"
        android:textColor="@color/koyuSiyahYaziRenk"
        android:textSize="16sp"
        app:chipBackgroundColor="@color/resimArkaRenk"
        app:layout_constraintEnd_toStartOf="@+id/chip7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip"
        app:layout_constraintTop_toBottomOf="@+id/imageView17" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="86dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/customer" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/customer1"
        android:textColor="@color/baslikYazi"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/customer2"
        android:textColor="@color/butonArkaRenk"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/natification" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/anaBaslik"
        android:textColor="@color/baslikYazi"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="129dp"
        android:layout_height="148dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip6"
        app:srcCompat="@drawable/cat_food" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="129dp"
        android:layout_height="148dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip8"
        app:srcCompat="@drawable/cat_food2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/chip1"
        android:textAlignment="center"
        android:textColor="@color/koyuSiyahYaziRenk"
        android:textSize="16sp"
        app:chipBackgroundColor="@color/resimArkaRenk"
        app:layout_constraintEnd_toStartOf="@+id/chip6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/teslim2"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/teslim1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="70dp"
        android:layout_height="74dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/dog_1" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="70dp"
        android:layout_height="74dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/cat1" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="70dp"
        android:layout_height="74dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/bird1" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="70dp"
        android:layout_height="74dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/rabbitt" />

</androidx.constraintlayout.widget.ConstraintLayout>